--- a/src/components/home/Repos.astro
+++ b/src/components/home/Repos.astro
@@ -107,7 +107,7 @@ function parseEmoji(text: string) {
 				</tbody>
 			</table>
 		</div>
-		<div class="w-350px bg-#ffffff08 border-#fff1 border-1 backdrop-blur-lg z-10 p-6 rounded-3xl flex flex-col gap-4 -mt-20% translate-x-60%">
+		<div class="w-350px bg-#ffffff08 border-#fff1 border-1 backdrop-blur-sm z-10 p-6 rounded-3xl flex flex-col gap-4 -mt-20% translate-x-60%">
 			<div class="flex w-full items-center justify-between">
 				<div class="flex items-center gap-4">
 					<div
