--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,11 +3,13 @@ import Layout from "@/layouts/BaseLayout.astro";
 import Hero from "@/components/home/Hero.astro";
 import Expertise from "@/components/home/Expertise.astro";
 import Repos from "@/components/home/Repos.astro";
+import About from "@/components/home/About.astro";
 ---
 
 <Layout title="Andka">
 	<Hero />
 	<Expertise />
 	<Repos />
+	<About />
 </Layout>
 
