--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Hero from "@/components/home/Hero.astro";
 import Expertise from "@/components/home/Expertise.astro";
 import Repos from "@/components/home/Repos.astro";
 import About from "@/components/home/About.astro";
+import GIT from "@/components/home/GIT.astro";
 ---
 
 <Layout title="Andka">
@@ -11,5 +12,6 @@ import About from "@/components/home/About.astro";
 	<Expertise />
 	<Repos />
 	<About />
+	<GIT />
 </Layout>
 
