feat: responsive (LP)

--- a/src/components/home/About.astro
+++ b/src/components/home/About.astro
@@ -2,10 +2,10 @@
 
 ---
 
-<div class="w-full p-20 flex flex-col gap-32 relative">
+<div class="w-full py-20 px-8 sm:(px-20 py-20) flex flex-col gap-32 relative">
 	<div class="max-w-3xl m-auto gap-8 flex flex-col">
-		<h1 class="text-5xl font-bold font-heading">Who Am I?</h1>
-		<section class="text-xl font-300 flex flex-col gap-4 pl-8">
+		<h1 class="text-4xl sm:text-5xl font-bold font-heading">Who Am I?</h1>
+		<section class="sm:text-xl font-300 flex flex-col gap-4 sm:pl-8">
 			<p>
 				I'm <span class="text-purple">Andika Nur Pratama</span> from East Java, Indonesia, and I began my journey in 2019. Currently, I'm
 				pursuing my education at the University of Muhammadiyah Ponorogo, specializing in Informatics Engineering.
