--- a/src/components/home/GIT.astro
+++ b/src/components/home/GIT.astro
@@ -2,18 +2,18 @@
 
 ---
 
-<div class="w-full flex flex-col items-center justify-center p-32 pb-46 gap-8 relative mt-8">
-	<h1 class="text-6xl font-bold font-heading">Let's get in touch!</h1>
-	<section class="grid gap-2 text-center">
-		<p class="text-2xl font-300 w-full">Work with me, or just say hi! I'd love to hear from you.</p>
-		<p class="font-300 w-full max-w-3xl opacity-50">
+<div class="w-full flex flex-col sm:(items-center justify-center) pt-32 px-8 xl:p-32 pb-46 gap-8 relative mt-8">
+	<h1 class="text-5xl sm:(text-6xl text-center) font-bold font-heading">Let's get in touch!</h1>
+	<section class="grid gap-2 ">
+		<p class="text-xl sm:(text-2xl text-center) font-300 w-full">Work with me, or just say hi! I'd love to hear from you.</p>
+		<p class="font-300 w-full sm:text-center max-w-3xl opacity-50">
 			I'm currently available for freelance work. If you have a project that you want to get started, think you need my help with something or
 			just fancy saying hey, then get in touch.
 		</p>
 	</section>
 	<a href="mailto:andikacahargen2@gmail.com">
 		<div class="p-2px bg-gradient-to-l from-#b56cfd to-#7558b8 rounded-full w-fit">
-			<div class="px-12 py-4 bg-gradient-to-l from-#9d53d6 to-#6245b7 rounded-full text-xl">Email me</div>
+			<div class="px-8 py-2 lg:(px-12 py-4 text-xl) bg-gradient-to-l from-#9d53d6 to-#6245b7 rounded-full">Email me</div>
 		</div>
 	</a>
 	<div
