--- a/src/components/home/Expertise.astro
+++ b/src/components/home/Expertise.astro
@@ -18,11 +18,11 @@ const expertise = [
 ];
 ---
 
-<div class="w-full py-32 flex items-center justify-center flex-col gap-16" x-data="{i: 0}">
-	<div class="border-1 border-#fff2 bg-#ffffff08 relative rounded-3xl p-2px grid grid-cols-3 max-w-6xl backdrop-blur-xl">
+<div class="w-full py-32 overflow-x-hidden overflow-y-visible px-8 flex items-center justify-center flex-col gap-16" x-data="{i: 0}">
+	<div class="border-1 border-#fff2 bg-#ffffff08 relative rounded-3xl grid grid-cols-1 sm:grid-cols-3 max-w-6xl backdrop-blur-xl">
 		{
 			expertise.map((el, index) => (
-				<div class="py-8 px-12" x-on:mouseenter={`i= ${index}`}>
+				<div class="py-8 px-12 w-full" x-on:mouseenter={`i= ${index}`}>
 					<div class="flex gap-6 w-full ">
 						<div class="flex gap-4 items-center w-full">
 							<span class={`h-12 w-12 bg-white ${el.icon}`} />
@@ -40,9 +40,10 @@ const expertise = [
 		}
 
 		<div
-			class="absolute top-0px left-0px w-[calc(33.3333%_-_4px)] h-[calc(100%_-_12px)] m-6px rounded-2xl border-1px backdrop-blur-3xl -z-1 border-#fff1 transition-all duration-500 ease-in-out box-border"
+			class="hidden lg:block absolute top-0px left-0px w-[calc(33.3333%_-_4px)] h-[calc(100%_-_12px)] m-6px rounded-2xl border-1px backdrop-blur-3xl -z-1 border-#fff1 transition-all duration-500 ease-in-out box-border"
 			:style="{ transform: `translateX(${i * 100}%)` }">
 		</div>
+
 		<div class="absolute -top-10 -left-20 blur-3xl -z-50">
 			<div class="w-20 h-20 bg-red" />
 			<div class="w-30 h-5 bg-sky -my-5" />
@@ -55,9 +56,9 @@ const expertise = [
 			<div class="w-30 h-20 bg-purple -my-5" />
 			<div class="w-30 h-20 bg-purple-7 mx-20 -my-5" />
 		</div>
-		<div class="absolute bottom-10 right-1/3 flex blur-3xl gap-8 flex-col  -z-50">
-			<div class="w-30 h-5 bg-sky -my-5 mx-10" />
-			<div class="w-30 h-20 bg-purple-7 mx-20 -my-5" />
+		<div class="absolute hidden bottom-10 right-1/3 flex blur-3xl gap-8 flex-col  -z-50">
+			<div class="hidden lg:block w-30 h-5 bg-sky -my-5 mx-10" />
+			<div class="hidden lg:block w-30 h-20 bg-purple-7 mx-20 -my-5" />
 		</div>
 	</div>
 </div>
