--- a/src/components/home/Repos.astro
+++ b/src/components/home/Repos.astro
@@ -27,8 +27,8 @@ function parseEmoji(text: string) {
 }
 ---
 
-<div class="py-32 px-16 max-w-screen-xl m-auto relative grid grid-cols-2 items-center gap-32">
-	<div class="flex flex-col gap-8 relative">
+<div class="py-32 lg:overflow-x-visible max-w-screen-xl m-auto relative grid sm:grid-cols-2 items-center gap-8 lg:gap-32">
+	<div class="flex flex-col gap-8 relative p-8">
 		<div class="absolute grid grid-cols-2 grid-rows-2 -left-50% -top-1/3">
 			<div
 				style="
@@ -59,7 +59,7 @@ function parseEmoji(text: string) {
 		</div>
 	</div>
 
-	<div class="w-full">
+	<div class="w-full px-8 overflow-hidden xl:overflow-visible">
 		<div class="w-full bg-#ffffff08 border-1 border-#fff1 backdrop-blur-3xl rounded-3xl border-#fff1 p-6 flex flex-col gap-6 relative">
 			<div class="absolute top-1/2 left-2/4 blur-2xl">
 				<div class="w-8 h-12 bg-purple rounded-full"></div>
@@ -107,7 +107,7 @@ function parseEmoji(text: string) {
 				</tbody>
 			</table>
 		</div>
-		<div class="w-350px bg-#ffffff08 border-#fff1 border-1 backdrop-blur-sm z-10 p-6 rounded-3xl flex flex-col gap-4 -mt-20% translate-x-60%">
+		<div class="w-350px bg-#ffffff08 border-#fff1 border-1 backdrop-blur-sm z-10 p-6 rounded-3xl flex flex-col gap-4 -mt-20% translate-x-20% xl:translate-x-60%">
 			<div class="flex w-full items-center justify-between">
 				<div class="flex items-center gap-4">
 					<div
