--- a/src/components/home/Expertise.astro
+++ b/src/components/home/Expertise.astro
@@ -18,7 +18,7 @@ const expertise = [
 ];
 ---
 
-<div class="w-full py-32 overflow-x-hidden overflow-y-visible px-8 flex items-center justify-center flex-col gap-16" x-data="{i: 0}">
+<div class="w-full py-32 overflow-x-hidden px-8 flex items-center justify-center flex-col gap-16" x-data="{i: 0}">
 	<div class="border-1 border-#fff2 bg-#ffffff08 relative rounded-3xl grid grid-cols-1 sm:grid-cols-3 max-w-6xl backdrop-blur-xl">
 		{
 			expertise.map((el, index) => (
