--- a/src/components/home/GIT.astro
+++ b/src/components/home/GIT.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<div class="w-full flex flex-col sm:(items-center justify-center) pt-32 px-8 xl:(p-32 pb-46) gap-8 relative mt-8">
+<div class="w-full flex flex-col sm:(items-center justify-center) pt-32 pb-70 px-8 xl:(p-32 pb-46) gap-8 relative mt-8">
 	<h1 class="text-5xl sm:(text-6xl text-center) font-bold font-heading">Let's get in touch!</h1>
 	<section class="grid gap-2 ">
 		<p class="text-xl sm:(text-2xl text-center) font-300 w-full">Work with me, or just say hi! I'd love to hear from you.</p>
