Feat hero and menu

--- a/src/components/home/Header.astro
+++ b/src/components/home/Header.astro
@@ -9,8 +9,9 @@ const links = [
 <header class="py-8 px-4 flex items-center justify-between max-w-7xl mx-auto">
 	<div>
 		<a href="/">
-			<div class="flex">
-				<div class="duration-500 bg-transparent border-transparent border-20 box-border border-t-lime-500 border-l-lime-500 border-r-lime-400 h-0 hover:(border-t-lime-500 border-l-lime-400 border-r-lime-500)"></div>
+			<div role="img" aria-label="Andka Logo" aria-hidden="true" class="text-3xl flex items-center gap-2">
+				<span class="i-charm-plant-pot text-lime-600"></span>
+				<span class="text-xl font-medium font-lexend">Andka</span>
 			</div>
 		</a>
 	</div>
