--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -6,7 +6,7 @@ import IconPlosion from "./IconPlosion.astro";
 	<div class="flex items-center justify-center text-center flex-col gap-4">
 		<h2 class="text-sm text-pink-400 bg-pink-100 rounded-full px-8 py-2 font-medium font-lexend">My Journey to Developer Enlightenment</h2>
 		<h1 class="text-7xl font-lexend font-bold max-w-4xl text-center leading-snug">
-			From <span class="text-yellow-500">Spaghetti</span> <span class="font-mono text-gray-600">Code</span> to <span class="relative text-white"
+			From <span class="text-yellow-500">Spaghetti</span> <span class="font-mono text-gray-600">Code</span> to <span class="relative text-white inline-block"
 				><span class="absolute top-15% -left-5% -rotate-3deg w-110% h-80% bg-pink -z-10"></span>Unicorn</span
 			> Sprinkles<span class="text-blue">.</span>
 		</h1>
