feat: change style

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -45,7 +45,7 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 
 <style is:global>
 	*{
-		font-family: 'DM sans', sans-serif;
+		font-family: 'JetBrains Mono', monospace;
 		box-sizing: border-box;
 	}
 </style>
