--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,9 @@
 ---
 import BaseHead from "../components/BaseHead.astro";
-import Header from "../components/home/Header.astro";
-import Hero from "../components/home/Hero.astro";
+import BaseNavbar from "../components/BaseNavbar.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
+
+const status = [];
 ---
 
 <!doctype html>
@@ -10,8 +11,21 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
-	<body>
-		<Header />
-		<Hero />
+	<body class="px-12 text-gray-400 bg-#111215">
+		<BaseNavbar />
+		<div class="max-w-3xl m-auto grid gap-16">
+			<main class="grid gap-6 mt-32">
+				<h1 class="font-bold text-5xl text-gray-200 font-lexend">Andika <span class="text-lg text-gray-400">Nur Pratama</span></h1>
+				<p>Web developer, both front-end and back-end. I also do bot development.</p>
+				<p>
+					A Computer Science student at <a href="https://www.umpo.ac.id" target="_blank">Muhammadiyah University of Ponorogo</a> with passion
+					in web development and bot development. I'm currently interested in some cyber security stuff and low-level programming.
+				</p>
+				<div class="inline-flex gap-32 w-full items-center">
+					<address class="inline-flex items-center gap-2"><span class="i-myna-location w-6 h-6"></span> Magetan, East Java</address>
+					<p class="flex items-center gap-2"><span class="rounded-full bg-yellow w-2 h-2"></span>Available for remote internship</p>
+				</div>
+			</main>
+		</div>
 	</body>
 </html>
