--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,9 +1,9 @@
 ---
 import type { CollectionEntry } from 'astro:content';
 import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import FormattedDate from '../components/FormattedDate.astro';
+import BaseNavbar from '../components/BaseNavbar.astro';
 
 type Props = CollectionEntry<'blog'>['data'];
 
@@ -55,7 +55,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 	</head>
 
 	<body>
-		<Header />
+		<BaseNavbar />
 		<main>
 			<article>
 				<div class="hero-image">
