--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import BaseHead from "../components/BaseHead.astro";
 import BaseNavbar from "../components/BaseNavbar.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
+import Footer from "../components/Footer.astro";
 
 const status = [];
 ---
@@ -11,10 +12,10 @@ const status = [];
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
-	<body class="px-12 text-gray-400 bg-#111215">
+	<body class="px-12 text-gray-400 bg-#111215 flex flex-col h-screen">
 		<BaseNavbar />
-		<div class="max-w-3xl m-auto grid gap-16">
-			<main class="grid gap-6 mt-32">
+		<div class="max-w-3xl m-auto grid gap-16 grow">
+			<main class="flex flex-col gap-6 mt-32">
 				<h1 class="font-bold text-5xl text-gray-200 font-lexend">Andika <span class="text-lg text-gray-400">Nur Pratama</span></h1>
 				<p>Web developer, both front-end and back-end. I also do bot development.</p>
 				<p>
@@ -27,5 +28,6 @@ const status = [];
 				</div>
 			</main>
 		</div>
+		<Footer />
 	</body>
 </html>
