--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,17 +1,15 @@
 ---
-import { type CollectionEntry, getCollection } from 'astro:content';
-import BlogPost from '../../layouts/BlogPost.astro';
+import { type CollectionEntry, getCollection } from "astro:content";
+import BlogPost from "../../layouts/BlogPost.astro";
 
-export async function getStaticPaths() {
-	const posts = await getCollection('blog');
-	return posts.map((post) => ({
-		params: { slug: post.slug },
-		props: post,
-	}));
-}
-type Props = CollectionEntry<'blog'>;
+const posts = await getCollection("blog");
+type Props = CollectionEntry<"blog">;
 
-const post = Astro.props;
+const { slug } = Astro.params;
+
+const post = posts.find((page) => page.slug === slug);
+if (!post) return Astro.redirect("/404");
+
 const { Content } = await post.render();
 ---
 
