Update favicon and font preloads

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -7,7 +7,8 @@ interface Props {
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
+const { title, description, image = "/blog-placeholder-1.jpg" } = Astro.props;
+import { ViewTransitions } from "astro:transitions";
 ---
 
 <!-- Global Metadata -->
@@ -17,9 +18,12 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta name="generator" content={Astro.generator} />
 
 <!-- Font preloads -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,800&family=JetBrains+Mono:wght@400;700;800&family=Lexend:wght@400;500;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+	href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,800&family=JetBrains+Mono:wght@400;700;800&family=Lexend:wght@400;500;700&display=swap"
+	rel="stylesheet"
+/>
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
@@ -44,8 +48,10 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
 
 <style is:global>
-	*{
-		font-family: 'JetBrains Mono', monospace;
+	* {
+		font-family: "JetBrains Mono", monospace;
 		box-sizing: border-box;
 	}
 </style>
+
+<ViewTransitions>
