feat: refactor code

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,67 @@
 ---
-import DefautLayout from "../layouts/DefautLayout.astro";
+import DefaultLayout from "../layouts/DefaultLayout.astro";
+
+const socialMedia = [
+	{
+		link: "https://github.com/xirf",
+		icon: "i-myna-brand-github",
+		name: "Github",
+	},
+	{
+		link: "https://www.facebook.com/0xirf",
+		icon: "i-myna-brand-facebook",
+		name: "Facebook",
+	},
+	{
+		link: "https://twitter.com/xirfs",
+		icon: "i-myna-brand-x",
+		name: "Twitter",
+	},
+];
 ---
 
-<DefautLayout>
-	<main class="flex flex-col gap-6 my-32">
-		<h1 class="font-bold text-5xl text-gray-200 font-lexend">Andika <span class="text-lg text-gray-400">Nur Pratama</span></h1>
-		<p>Web developer, both front-end and back-end. I also do bot development.</p>
-		<p>
-			A Computer Science student at <a href="https://www.umpo.ac.id" target="_blank">Muhammadiyah University of Ponorogo</a> with passion in web
-			development and bot development. I'm currently interested in some cyber security stuff and low-level programming.
-		</p>
-		<div class="inline-flex gap-32 w-full items-center">
-			<address class="inline-flex items-center gap-2"><span class="i-myna-location w-6 h-6"></span> Magetan, East Java</address>
-			<p class="flex items-center gap-2"><span class="rounded-full bg-yellow w-2 h-2"></span>Available for remote internship</p>
-		</div>
-	</main>
-</DefautLayout>
+<DefaultLayout>
+	<div class="flex items-center justify-center h-screen p-12">
+		<main class="w-full grid gap-6 max-w-xl">
+			<div>
+				<h1 class="text-4xl font-bold font-lexend">Andika <span class="text-base font-normal font-mono">Nur Pratama</span></h1>
+				<p class="text-xs mt-1">Web developer | Open Source Enthusiast</p>
+			</div>
+			<div class="text-sm grid gap-3">
+				<div>
+					<p>Hi, I am Andika Nur Pratama</p>
+					<p>Currently a student in Informatics Engineering.</p>
+				</div>
+				<p>
+					Dreaming about a better world with technology and make it happen is my passinon, you can check <a href="/projects" class="font-bold underline"
+						>my full projects here</a
+					>. lately I'm learning about mobile development and machine learning.
+				</p>
+			</div>
+			<div class="inline-flex flex-col text-xs gap-1">
+				<address class="inline-flex items-center gap-2 text-xs">
+					<span class="i-myna-location w-4 h-4"></span> Magetan, East Java
+				</address>
+
+				<div class="flex items-center gap-2 flex-row">
+					<div class="rounded-full bg-yellow w-2 h-2 mx-1"></div>
+					<p>Available for remote internship</p>
+				</div>
+				<div class="w-20 h-1px bg-gray mx-auto mt-2"></div>
+			</div>
+			<div class="text-sm">
+				<p>Find me on</p>
+				<div class="flex items-start justify-start gap-4 mt-2">
+					{
+						socialMedia.map((url) => (
+							<a href={url.link} class="flex items-center justify-center gap-2" target="_blank" rel="noopener noreferrer">
+								<span class:list={[url.icon, "inline-block", "w-4", "h-4"]} />
+								{url.name}
+							</a>
+						))
+					}
+				</div>
+			</div>
+		</main>
+	</div>
+</DefaultLayout>
