--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,8 +24,11 @@ const socialMedia = [
 	<div class="flex items-center justify-center h-screen p-12">
 		<main class="w-full grid gap-6 max-w-xl">
 			<div>
-				<h1 class="text-4xl font-bold font-lexend">Andika <span class="text-base font-normal font-mono">Nur Pratama</span></h1>
-				<p class="text-xs mt-1">Web developer | Open Source Enthusiast</p>
+				<h1>
+					<span class="@dark:text-#e5e7eb text-4xl font-bold font-lexend">Andika</span>
+					<span class="text-base font-normal font-mono">Nur Pratama</span>
+				</h1>
+				<p class="text-xs mt-1">Web developer | Bot Developer</p>
 			</div>
 			<div class="text-sm grid gap-3">
 				<div>
@@ -33,9 +36,10 @@ const socialMedia = [
 					<p>Currently a student in Informatics Engineering.</p>
 				</div>
 				<p>
-					Dreaming about a better world with technology and make it happen is my passinon, you can check <a href="/projects" class="font-bold underline"
-						>my full projects here</a
-					>. lately I'm learning about mobile development and machine learning.
+					Dreaming about a better world with technology and make it happen is my passion, you can check <a
+						href="/projects"
+						class="font-bold underline">my full projects here</a
+					>. lately I'm learning about mobile development and machine learning with <a href="https://bangkit.academy" rel="noopener" target="_blank" class="underline">Bangkit Academy</a> program.
 				</p>
 			</div>
 			<div class="inline-flex flex-col text-xs gap-1">
@@ -45,7 +49,7 @@ const socialMedia = [
 
 				<div class="flex items-center gap-2 flex-row">
 					<div class="rounded-full bg-yellow w-2 h-2 mx-1"></div>
-					<p>Available for remote internship</p>
+					<p>Available for remote only</p>
 				</div>
 				<div class="w-20 h-1px bg-gray mx-auto mt-2"></div>
 			</div>
