--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ const links = [
 	{
 		href: "/blog",
 		label: "Blog",
-		icon: "i-myna-pencil",
+		icon: "i-myna-book",
 	},
 	{
 		href: "/projects",
