--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ const socialMedia = [
 ---
 
 <DefaultLayout>
-	<div class="flex items-center justify-center h-screen p-12">
+	<div class="flex items-center justify-center h-90vh p-12">
 		<main class="w-full grid gap-6 max-w-xl">
 			<div>
 				<h1>
