fix: side padding

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -14,10 +14,10 @@ for (const post of posts) {
 ---
 
 <DefautLayout title="Blog">
-	<main class="grid gap-6 mt-32 max-w-3xl mx-auto">
+	<main class="grid gap-6 mt-32 max-w-3xl mx-auto px-12">
 		<h1>
-			<span class="text-4xl font-bold font-lexend">Blog</span>
-			<span class="font-light">A collection of my thoughts</span>
+			<span class="text-3xl lg:text-4xl font-bold font-lexend">Blog</span>
+			<span class="font-light text-sm">A collection of my thoughts</span>
 		</h1>
 		<p>
 			Here you can find a collection of my thoughts on various topics. I try to write about things that I find interesting, and that I think
