--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -3,7 +3,6 @@ import { type CollectionEntry, getCollection } from "astro:content";
 import DefaultLayout from "../../layouts/DefaultLayout.astro";
 import FormattedDate from "../../components/FormattedDate.astro";
 
-
 const posts = await getCollection("blog");
 type Props = CollectionEntry<"blog">;
 
@@ -12,12 +11,15 @@ const { slug } = Astro.params;
 const post = posts.find((page) => page.slug === slug);
 if (!post) return Astro.redirect("/404");
 
-const { title, pubDate, updatedDate } = post.data
+const prevPost = posts[posts.indexOf(post) - 1];
+const nextPost = posts[posts.indexOf(post) + 1];
+
+const { title, pubDate, updatedDate } = post.data;
 const { Content } = await post.render();
 ---
 
 <DefaultLayout>
-	<div class="max-w-3xl mx-auto">
+	<div class="max-w-3xl mx-auto px-12">
 		<article class="my-12">
 			<div class="prose">
 				<div class="title">
@@ -36,6 +38,15 @@ const { Content } = await post.render();
 				</div>
 				<Content />
 			</div>
-		</article>>
+		</article>
+		<div class="grid opacity-50">
+			{prevPost ? <a href={prevPost.slug}>&gt; cd {prevPost.data.title.slice(0, 10)}</a> : <a href="/blog">&gt; cd ..</a>}
+			{nextPost ? <a href={nextPost.slug}>&gt; cd {nextPost.data.title.slice(0, 10)}</a> : ""}
+		</div>
 	</div>
+	<div class="utterances">
+		<div class="utterances-frame"></div>
+	</div>
+	<script src="https://utteranc.es/client.js" repo="xirf/xirf" issue-term="pathname" theme="preferred-color-scheme" crossorigin="anonymous" async
+	></script>
 </DefaultLayout>
